# konachan-popular-python

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
konachan_popular/: __init__.py  __main__.py  konachan_popular.py
