[project]
name = "konachan-popular"
description = "Backend for the Telegram channel @KonachanPopular"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-2.0-only" }
version = "1.0.0"
keywords = ["telegram", "konachan"]
authors = [{ name = "K4YT3X", email = "i@k4yt3x.com" }]
dependencies = [
    "python-telegram-bot[rate-limiter]>=20.0b0",
    "loguru>=0.6.0",
    "requests>=2.28.1",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/k4yt3x/konachan-popular-python"

[project.scripts]
koanchan-popular = "konachan_popular:main"

[tool.isort]
profile = "black"

[tool.pdm]
version = { from = "konachan_popular/__init__.py" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
